@@ -19,6 +19,7 @@ module type Common_options = sig
   val _noassert : unit -> unit
   val _nolabels : unit -> unit
   val _nostdlib : unit -> unit
+  val _open : string -> unit
   val _ppx : string -> unit
   val _principal : unit -> unit
   val _rectypes : unit -> unit
