@@ -71,6 +71,7 @@ module Options = Main_args.Make_bytecomp_options (struct
   let _noautolink = option "-noautolink"
   let _nostdlib = option "-nostdlib"
   let _o s = option_with_arg "-o" s
+  let _open s = option_with_arg "-open" s
   let _output_obj = option "-output-obj"
   let _pack = option "-pack"
   let _pp s = incompatible "-pp"
