@@ -23,11 +23,12 @@ val debug : bool ref
 val fast : bool ref
 val link_everything : bool ref
 val custom_runtime : bool ref
-val bytecode_compatible_32: bool ref
+val bytecode_compatible_32 : bool ref
 val output_c_object : bool ref
 val all_ccopts : string list ref
 val classic : bool ref
 val nopervasives : bool ref
+val open_module : string list ref
 val preprocessor : string option ref
 val all_ppx : string list ref
 val annotations : bool ref
